# makefile_checker

./: .gitignore  Cargo.toml  README.md  README.zh.md
src/: config.rs  i18n.rs  interactive.rs  main.rs  makefile_parser.rs  makefile_updater.rs  reporter.rs  snapshot.rs  upstream.rs
